force-app/main/default/objects/Service_Bulletin__kav/fields/Attach1__c.field-meta.xml
<CustomField>
    <fullName>Attach1__c</fullName>
    <label>Attach1</label>
    <type>File</type>
</CustomField>