force-app/main/default/objects/Service_Bulletin__kav/fields/Key_Words__c.field-meta.xml
<CustomField>
    <fullName>Key_Words__c</fullName>
    <label>Key Words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>