force-app/main/default/objects/Service_Bulletin__kav/fields/Key_Words_Test__c.field-meta.xml
<CustomField>
    <fullName>Key_Words_Test__c</fullName>
    <label>Key Words Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>